Update main menu Add upload cloud

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <title>设置</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="./settings.css"> -->
+    <link rel="stylesheet" href="./settings.css">
   </head>
   <body>
     <div class="container mt-4">
       <h5>设置</h5>
       <form id="settings-form">
-        <!-- <ul class="nav nav-tabs">
+        <ul class="nav nav-tabs">
           <li class="nav-item">
             <a class="nav-link active" href="#" data-tab="#config-file-location">文件存储位置</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" data-tab="#qiniu-sync-params">七牛云同步</a>
           </li>
-        </ul> -->
+        </ul>
         <div id="config-file-location" class="config-area mt-4">       
           <div class="form-group">
             <label for="exampleInputPassword1">选择文件存储位置</label>
@@ -29,7 +29,7 @@
             </div>
           </div>
         </div>
-        <!-- <div id="qiniu-sync-params" class="config-area mt-4">
+        <div id="qiniu-sync-params" class="config-area mt-4">
           <div class="form-group row">
             <label for="accessKey" class="col-3 col-form-label">Access Key</label>
             <div class="col-9">
@@ -50,7 +50,7 @@
               <input type="text" class="form-control" id="bucketName" placeholder="请输入 Bucket 名称">
             </div>
           </div>
-        </div> -->
+        </div>
         <button type="submit" class="btn btn-primary">保存</button>
       </form>
     </div>
